--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
+    "@deepvision/eslint-config": "^6.6.7",
     "@nuxtjs/vuetify": "^1.11.2",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^4.19.1",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.6.0",
     "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-vue": "^4.0.0"
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-vue": "^6.2.2"
   }
 }
