--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@nuxtjs/onesignal": "^3.0.0-beta.16",
+    "@nuxtjs/pwa": "^3.3.2",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
@@ -22,6 +24,7 @@
     "eslint": "^7.6.0",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^4.0.2",
-    "eslint-plugin-vue": "^6.2.2"
+    "eslint-plugin-vue": "^6.2.2",
+    "vuetify-loader": "^1.3.1"
   }
 }
